--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "quagga": "^0.12.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
-    "autoprefixer": "^8.6.4",
-    "tailwindcss": "^0.7.0",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "autoprefixer": "^8.6.4",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^23.6.0",
+    "nodemon": "^1.18.9",
+    "tailwindcss": "^0.7.0",
     "vue-jest": "^3.0.2"
   }
 }
